--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
 
             <div class="music-info">
-                <h2 id="title">Choo Lu</h2>
+                <h2 id="title">Choo Loo</h2>
             </div>
 
 
